# rag-bot

./: .env.example  .gitignore  README.md  pyproject.toml
app/core/: config.py  log_config.py
app/ingestion/: chunk.py  embed.py  transcribe.py
scripts/: measure_chunk_lengths.py
