[project]
name = "rag-bot"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "faster-whisper>=1.2.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
    "uvicorn>=0.50.2",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
